--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     commands:
       - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
       - export NVM_DIR="$HOME/.nvm"
-      - source "$NVM_DIR/nvm.sh"
-      - nvm install 21
+      - (source "$NVM_DIR/nvm.sh" && nvm install 21)
       - npm install -g yarn
       - yarn install
 
