--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,16 +2,16 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 14
     commands:
-      - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
-      - export NVM_DIR="$HOME/.nvm"
-      - (source "$NVM_DIR/nvm.sh" && nvm install 21)
       - npm install -g yarn
       - yarn install
 
   pre_build:
     commands:
       # Optionally, you can run any pre-build commands here
+      - yarn lint
 
   build:
     commands:
@@ -20,4 +20,5 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: 'dist' # Adjust this based on your build output directory
+  base-directory: 'dist' # Adjust this based on your Vite output directory
+
