--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     runtime-versions:
       nodejs: 16
     commands:
-      - npm install -g yarn
-      - yarn install
+      - npm install
 
   pre_build:
     commands:
@@ -14,7 +13,7 @@ phases:
 
   build:
     commands:
-      - yarn build
+      - npm run build
 
 artifacts:
   files:
