--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,8 @@ phases:
     runtime-versions:
       nodejs: 16
     commands:
-      - npm install
+      - npm install  # Using npm instead of yarn
+      - npm ci       # Use `npm ci` for a more reliable and reproducible install
 
   pre_build:
     commands:
@@ -13,9 +14,13 @@ phases:
 
   build:
     commands:
-      - npm run build
+      - npm run build  # Using npm instead of yarn for running build script
 
 artifacts:
   files:
     - '**/*'
-  base-directory: 'dist' # Adjust this based on your Vite output directory
+  base-directory: 'dist'  # Adjust this based on your Vite output directory
+
+cache:
+  paths:
+    - node_modules  # Cache node_modules for faster builds
